--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body:after {
   margin: -100px -800px;
   background-image:
     linear-gradient(90deg, rgba(0,0,0,0), rgba(10,20,10,.75) 50%, rgba(10,25,10,1)),
-    url(001.jpeg);
+    url(asparagus.jpg);
 }
 
 /* ceiling */
