--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body:before {
     linear-gradient(90deg, rgba(0,0,0,0), rgba(10,20,10,.75) 50%, rgba(10,25,10,1)),
     url(asparagus.jpg);
 }
-body:before {
+body:after {
   height: 200px;
   width: 1600px;
   margin: -100px -800px;
