--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body:before
   margin: -100px -800px;
   background-image:
     linear-gradient(90deg, rgba(0,0,0,0), rgba(10,20,10,.75) 50%, rgba(10,25,10,1)),
-    url(all.jpg);
+    url(kid1.jpg);
 }
 
 /* ceiling */
